--- a/meals/templates/meals/category.html
+++ b/meals/templates/meals/category.html
@@ -7,7 +7,8 @@
 <div class="flex justify-end">
     <div class="mr-28 text-center">
         <p class="mb-1">Sort by:</p>
-        <p><a href="/category/{{ categoryName }}_rating" class="mx-3 text-blue-600 underline">Rating</a>
+        <p>
+            <a href="/category/{{ categoryName }}_rating" class="mx-3 text-blue-600 underline">Rating</a>
             <a href="/category/{{ categoryName }}_country" class="mx-3 text-blue-600 underline">Country</a>
             <a href="/category/{{ categoryName }}_date" class="mx-3 text-blue-600 underline">Date</a>
         </p>
