--- a/meals/templates/meals/logout.html
+++ b/meals/templates/meals/logout.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>logged out</p>
-    <a href="{% url 'home' %}">Go to Home</a>
+    <a href="{% url 'home' '+Vegetarian+Spicy+Healthy+Seafood+Morning+Afternoon+Evening+Recommended+' 'date' %}">Go to Home</a>
 </body>
 </html>
