--- a/meals/templates/meals/category.html
+++ b/meals/templates/meals/category.html
@@ -5,9 +5,9 @@
     <div class="mr-28 text-center">
         <p class="mb-1">Sort by:</p>
         <p>
-            <a href="/category/sort_rating" class="mx-3 text-blue-600 underline">Rating</a>
-            <a href="/category/sort_country" class="mx-3 text-blue-600 underline">Country</a>
-            <a href="/category/sort_date" class="mx-3 text-blue-600 underline">Date</a>
+            <a href="/home/tags_{{tags}}/sort_date" class="mx-3 text-blue-600 underline">Rating</a>
+            <a href="/home/tags_{{tags}}/sort_country" class="mx-3 text-blue-600 underline">Country</a>
+            <a href="/home/tags_{{tags}}/sort_date" class="mx-3 text-blue-600 underline">Date</a>
         </p>
     </div>
 </div>
@@ -20,6 +20,9 @@
         </div>
     </a>
     {% endfor %}
+    {% if mealList.first is None %}
+    <p class="text-center">No match</p>
+    {% endif %}
 </div>
 
 {% endblock %}
