--- a/meals/templates/meals/history.html
+++ b/meals/templates/meals/history.html
@@ -4,9 +4,25 @@
 <div class="flex mt-5">
     <div class="w-1/2">
         <p class="text-center">Your Ratings</p>
+        {% for meal in meals %}
+            <a href="/detail_{{ meal.id }}">
+                <div class="flex items-center w-3/5 mx-auto my-5 border-2">
+                    <img src={{ meal.imgUrl }} width="20%" class="mr-3">
+                    <p>{{ meal.name }} ({{ meal.countryOfOrigin }}) Avg Score: {{ meal.avgRating }}, Votes: {{ meal.numOfVotes }}</p>
+                </div>
+            </a>
+        {% endfor %}
     </div>
     <div class="w-1/2">
         <p class="text-center">Your Meals</p>
+        {% for rating in ratings %}
+            <a href="/detail_{{ rating.meal.id }}">
+                <div class="flex items-center w-3/5 mx-auto my-5 border-2">
+                    <img src={{ rating.meal.imgUrl }} width="20%" class="mr-3">
+                    <p>{{ rating.meal.name }} ({{ rating.meal.countryOfOrigin }}) Avg Score: {{ rating.meal.avgRating }}, Votes: {{ rating.meal.numOfVotes }}</p>
+                </div>
+            </a>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
