added landing page

--- a/meals/templates/meals/detail.html
+++ b/meals/templates/meals/detail.html
@@ -27,7 +27,7 @@
             <span class="mr-1 mt-1">0</span>
             <input name="rating" class="" type="range" min="0" max="5">
             <p class="ml-1 mt-1">5</p>
-            <button type="submit" class="ml-4 border border-sky-600 rounded text-sky-600 p-1 px-2">Submit</button>
+            <button name="ratingBtn" type="submit" class="ml-4 border border-sky-600 rounded text-sky-600 p-1 px-2">Submit</button>
     </div>
 </form>
 {% endblock %}
