--- a/meals/templates/meals/header.html
+++ b/meals/templates/meals/header.html
@@ -27,7 +27,7 @@
                         {% csrf_token %}
                         <input class="border border-2 rounded border-gray-300 pl-2 m-1" placeholder="username" type="username" name="username">
                         <input class="border border-2 rounded border-gray-300 pl-2 m-1" placeholder="password" type="password" name="password">
-                        <button type="submit" class="border border-sky-600 rounded text-sky-600 px-2 py-1 mt-1">Submit</button>
+                        <button name="loginBtn" type="submit" class="border border-sky-600 rounded text-sky-600 px-2 py-1 mt-1">Submit</button>
                     </form>
                     <a href="{% url 'register' %}" class="underline text-blue-600">Register</a>
                 {% endif %}
