--- a/meals/templates/meals/category.html
+++ b/meals/templates/meals/category.html
@@ -36,7 +36,7 @@
     <a href="/detail_{{ meal.id }}">
         <div class="flex items-center w-3/5 mx-auto my-5 border-2">
             <img src={{ meal.imgUrl }} width="20%" class="mr-3">
-            <p>{{ meal.name }} ({{ meal.countryOfOrigin }}) Avg Score: {{ meal.avgRating }}, Votes: {{ meal.numOfVotes }}</p>
+            <p>{{ meal.name }} ({{ meal.countryOfOrigin }}) Avg Score: {{ meal.avgRating|roundValue:2 }}, Votes: {{ meal.numOfVotes }}</p>
         </div>
     </a>
     {% endfor %}
